--- a/TracalorieApp/index.html
+++ b/TracalorieApp/index.html
@@ -55,12 +55,12 @@
               <button class="add-btn btn blue darken-3">
                 <i class="fa fa-plus"></i> Add Meal
               </button>
-              <!-- <button class="update-btn btn orange">
+              <button class="update-btn btn orange">
                 <i class="fa fa-pencil-squoare-o"></i> Update Meal
               </button>
               <button class="delete-btn btn red">
                 <i class="fa fa-remove"></i> Delete Meal
-              </button> -->
+              </button>
               <button class="back-btn btn grey pull-right">
                 <i class="fa fa-chevron-circle-left"></i> Back
               </button>
