--- a/ProtoPhotoApp/index.html
+++ b/ProtoPhotoApp/index.html
@@ -10,11 +10,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style.css" />
-    <title>ProtoPhoto</title>
+    <title>FreeFrames</title>
   </head>
   <body>
     <header>
-      <h2><a id="logo" href="./index.html">Photon</a></h2>
+      <h2><a id="logo" href="./index.html">FreeFrames</a></h2>
       <form action="" class="search-form">
         <input type="text" name="search" class="search-input" />
         <button type="submit" class="submit-btn">Search</button>
