--- a/RangeenApp/index.html
+++ b/RangeenApp/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Aladin&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
@@ -13,6 +18,31 @@
     <title>Coolors</title>
   </head>
   <body>
+    <header>
+      <!-- Logo -->
+      <div class="logo">Rangeen</div>
+      <!-- Interaction Panel -->
+      <div class="panel">
+        <div class="library-panel">
+          <button class="library"><i class="fas fa-book-open"></i></button>
+          <p>Library</p>
+        </div>
+        <div class="generate-panel">
+          <button class="generate"><i class="fas fa-sync"></i></button>
+          <p>Generate</p>
+        </div>
+        <div class="save-panel">
+          <button class="save"><i class="fas fa-save"></i></button>
+          <p>Save</p>
+        </div>
+        <div class="save-panel">
+          <button class="save"><i class="fas fa-info"></i></button>
+          <p>Info</p>
+        </div>
+      </div>
+      <!-- Info -->
+    </header>
+
     <!-- All colors container -->
     <div class="colors">
       <!-- Color 1 -->
@@ -219,21 +249,6 @@
             data-sat="4"
           />
         </div>
-      </div>
-    </div>
-    <!-- Interaction Panel -->
-    <div class="panel">
-      <div class="library-panel">
-        <button class="library"><i class="fas fa-book-open"></i></button>
-        <p>Library</p>
-      </div>
-      <div class="generate-panel">
-        <button class="generate"><i class="fas fa-sync"></i></button>
-        <p>Generate</p>
-      </div>
-      <div class="save-panel">
-        <button class="save"><i class="fas fa-save"></i></button>
-        <p>Save</p>
       </div>
     </div>
     <!-- Copy to Clipboard -->
