--- a/PictelApp/index.html
+++ b/PictelApp/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style.css" />
-    <title>FreeFrames</title>
+    <title>PICTEL</title>
   </head>
   <body>
     <header>
