--- a/RangeenApp/index.html
+++ b/RangeenApp/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style.css" />
-    <title>Coolors</title>
+    <title>Rangeen</title>
   </head>
   <body>
     <header>
