--- a/RangeenApp/src/index.html
+++ b/RangeenApp/src/index.html
@@ -283,10 +283,16 @@
         <!-- Save Container -->
         <div class="save-container">
             <div class="save-popup">
-                <button class="close-save">X</button>
-                <h4>Give a name to your pallete</h4>
+                <div class="save-div">
+                    <h4>Give a name to your pallete</h4>
+                    <button class="close-save">X</button>
+                </div>
+
                 <input type="text" max-length="35" class="save-name" />
-                <button type="submit" class="submit-save">Save</button>
+                <div class="submit-di">
+                    <button type="submit" class="submit-save">Save</button>
+                    <button type="submit" class="submit-close">Close</button>
+                </div>
             </div>
         </div>
         <!-- Library Container -->
